--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
   Redirecting...
   </body>
   <script>
+  function closeWindow() { 
+    window.open('','_parent',''); 
+    window.close(); 
+  }
   if (window.location.search == ""){
     window.location.href = "https://github.com/ewerx/x-redirect/";
   } else {
     const queryString = window.location.search;
     window.location.href = queryString.split("://")[0].substr(1) + "://" + queryString.split("://")[1];
-    window.close();
+    closeWindow();
   };
   </script>
 </html>
