--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     window.location.href = queryString.split("://")[0].substr(1) + "://" + queryString.split("://")[1];
     closeWindow();
   };
+  closeWindow();
   </script>
 </html>
